--- a/src/App.css
+++ b/src/App.css
@@ -21,16 +21,16 @@ html {
 }
 
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: #FBCD02;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #c1c1c1;
+  background: #FBCD02;
   border-radius: 4px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #a8a8a8;
+  background: #FBCD02;
 }
 
 /* Range Slider Styles */
