--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   line-height: 1.6;
   color: #374151;
+  overflow-x: hidden;
 }
 
 /* Smooth scrolling */
